<resources>
    <string name="app_name">CPU Scheduling FCFS</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <!--Table Header-->
    <string name="cpu_burst">CPU Burst</string>
    <string name="process_id">Process ID</string>
    <string name="arrival_time">Arrival Time</string>

    <!--Button Values-->
    <string name="add_process">Add Process</string>
    <string name="simulate">Simulate Process</string>
    <string name="save">Save</string>

    <string name="turn_around">Turn-Around Time</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="total">Total</string>
    <string name="title_activity_input_data">Process Table</string>
    <string name="raw_data">Raw Data</string>
</resources>
