<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DataInputtingActivity">
    <item
        android:id="@+id/clear_table"
        android:icon="@drawable/ic_trash"
        android:orderInCategory="300"
        android:title="@string/clear"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_item"
        android:icon="@drawable/ic_plus"
        android:orderInCategory="200"
        android:title="@string/add_process"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>