<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayoutTotal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/black"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayoutTableRowAverage"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple">

        <TextView
            android:id="@+id/average_waititng_time"
            android:text="@string/waiting_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/average_turn_around_time"
            android:layout_weight="1"
            android:text="@string/turn_around"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/black"/>


    <LinearLayout
        android:id="@+id/rawDataTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/process_id"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:background="@android:color/black"/>

                <TextView
                    android:text="@string/arrival_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:background="@android:color/black"/>

                <TextView
                    android:text="@string/cpu_burst"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/black"/>
    </LinearLayout>
</LinearLayout>